# rust-v-hsm-can

./: .gitignore  CHANGELOG.md  CI_PARALLELIZATION.md  CLAUDE.md  Cargo.toml  HSM_PERFORMANCE_EVALUATOR.md  MULTI_CORE_PLAN.md  README.md  run_ci_tests.sh  run_ci_tests_parallel.sh
.github/: ci_report.txt
.github/workflows/: ci-parallel.yml  ci.yml
autonomous_controller/: Cargo.toml  README.md
autonomous_controller/attack_configs/: README.md  dos_flooding.json  fuzzing_high_intensity.json  injection_brake_attack.json  replay_control_commands.json
autonomous_controller/src/: access_control.rs  anomaly_detection.rs  attack_framework.rs  attack_sim.rs  baseline_persistence.rs  can_bus.rs  config_management.rs  core_affinity_config.rs  error_handling.rs  firmware_rollback.rs  hsm.rs  incident_response.rs  lib.rs  main.rs  network.rs  performance.rs  protected_memory.rs  rate_limiter.rs  security_correlation.rs  security_gateway.rs  security_log.rs  tara.rs  types.rs  uds_diagnostics.rs
autonomous_controller/src/attack_sim/: fuzzing.rs  injection.rs  metrics.rs  orchestrator.rs  replay.rs
autonomous_controller/src/hsm/: core.rs  crypto.rs  errors.rs  firmware.rs  hardware_rng.rs  key_rotation.rs  mod.rs  performance.rs  replay.rs  secured_frame.rs
autonomous_controller/src/hsm_service/: client.rs  mod.rs  protocol.rs  server.rs
autonomous_controller/tests/: anomaly_ids_regression_tests.rs  attack_framework_tests.rs  security_regression_tests.rs
basic/: README.md
basic/src/: can_bus.rs  lib.rs  main.rs  network.rs  rate_limiter.rs
doc/: 00_CYBERSECURITY_OVERVIEW.md  01_ISO21434_COMPLIANCE.md  03_CORE_SECURITY_MECHANISMS.md  04_ANOMALY_IDS.md  CYBERSECURITY_AUDIT_REPORT.md
src/: ecu.rs  lib.rs  main.rs  types.rs
tests/: README.md  access_control_regression_tests.rs  attack_regression_tests.rs  integration_tests.rs  replay_protection_regression_tests.rs
utils/docs/: architecture.dot
