[package]
name = "autonomous_vehicle_sim"
version = "0.1.0"
edition = "2024"
default-run = "autonomous_vehicle_sim"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
rand = "0.8"
ctrlc = "3.4"
# Cryptography dependencies for HSM
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
crc = "3.0"

# Main launcher
[[bin]]
name = "autonomous_vehicle_sim"
path = "src/main.rs"

# Bus infrastructure
[[bin]]
name = "bus_server"
path = "src/bin/bus_server.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

# Sensor ECUs
[[bin]]
name = "wheel_fl"
path = "src/bin/wheel_fl.rs"

[[bin]]
name = "wheel_fr"
path = "src/bin/wheel_fr.rs"

[[bin]]
name = "wheel_rl"
path = "src/bin/wheel_rl.rs"

[[bin]]
name = "wheel_rr"
path = "src/bin/wheel_rr.rs"

[[bin]]
name = "engine_ecu"
path = "src/bin/engine_ecu.rs"

[[bin]]
name = "steering_sensor"
path = "src/bin/steering_sensor.rs"

# Controller ECUs
[[bin]]
name = "autonomous_controller"
path = "src/bin/autonomous_controller.rs"

[[bin]]
name = "brake_controller"
path = "src/bin/brake_controller.rs"

[[bin]]
name = "steering_controller"
path = "src/bin/steering_controller.rs"

# Attack scenarios (for security research and testing)
[[bin]]
name = "attack_injection"
path = "src/bin/attacks/attack_injection.rs"

[[bin]]
name = "attack_replay"
path = "src/bin/attacks/attack_replay.rs"

[[bin]]
name = "attack_flooding"
path = "src/bin/attacks/attack_flooding.rs"

[[bin]]
name = "attack_spoofing"
path = "src/bin/attacks/attack_spoofing.rs"

[[bin]]
name = "attack_injection_short_cycles"
path = "src/bin/attacks/attack_injection_short_cycles.rs"

[[bin]]
name = "attack_injection_burst"
path = "src/bin/attacks/attack_injection_burst.rs"

# Test helpers
[[bin]]
name = "test_legitimate_sender"
path = "src/bin/test_legitimate_sender.rs"

# Security audit tools
[[bin]]
name = "security_log_analyzer"
path = "src/bin/security_log_analyzer.rs"

[dev-dependencies]
tempfile = "3.8"
